--- a/06-tabs/src/index.css
+++ b/06-tabs/src/index.css
@@ -278,7 +278,7 @@ ul {
 }
 .job-btn:hover {
   color: var(--primary-500);
-  box-shadow: 0 2px var(--primary-500);
+  /*  box-shadow: 0 2px var(--primary-500); */
 }
 .active-btn {
   color: var(--primary-500);
